--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -7,7 +7,6 @@ embedded = true
 
 [build]
 automatically_update_urls_on_dev = true
-include_config_on_deploy = true
 
 [webhooks]
 api_version = "2026-01"
@@ -22,7 +21,10 @@ api_version = "2026-01"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "write_products"
+scopes = "read_products,write_products,read_orders,write_orders,read_inventory,write_inventory,read_customers,write_customers"
+
+
+
 
 [auth]
 redirect_urls = [ "https://example.com/api/auth" ]
