--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "node": ">=20.10"
   },
   "dependencies": {
-    "@prisma/client": "^6.18.0",
+    "@prisma/client": "^6.19.0",
     "@react-router/dev": "^7.9.5",
     "@react-router/fs-routes": "^7.9.5",
     "@react-router/node": "^7.9.5",
@@ -37,11 +37,12 @@
     "@shopify/shopify-app-session-storage-prisma": "^7.0.0",
     "isbot": "^5.1.31",
     "p-map": "^5.5.0",
-    "prisma": "^6.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.9.5",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "winston": "^3.18.3",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@shopify/api-codegen-preset": "^1.2.0",
@@ -62,6 +63,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "graphql-config": "^5.1.1",
     "prettier": "^3.6.2",
+    "prisma": "^6.19.0",
     "typescript": "^5.9.3",
     "vite": "^6.3.6"
   },
